...
        ) {
          Text("Open Animations", maxLines = 2, overflow = TextOverflow.Ellipsis)
        }
      }
    }
    item {
      SentryTraced("show_dialog") {
        OutlinedButton(onClick = { showDialog = true }, modifier = Modifier) {
          Text("Show Dialog", maxLines = 2, overflow = TextOverflow.Ellipsis)
        }
      }
    }
  }

  // AlertDialog managed by local state
...
              }
            } else {
              showDialog = false
            }
          }
        ) {
          Text("Close")
        }
      },
    )
  }
}

...
    columns = GridCells.Adaptive(minSize = 180.dp),
    contentPadding = PaddingValues(16.dp),
    horizontalArrangement = Arrangement.spacedBy(12.dp),
    verticalArrangement = Arrangement.spacedBy(12.dp),
  ) {
    item {
      SentryTraced("open_compose_activity") {
        OutlinedButton(
          onClick = {
            activity.startActivity(
              Intent(activity, io.sentry.samples.android.compose.ComposeActivity::class.java)
            )
          },
          modifier = Modifier,
        ) {
          Text("Open Compose Activity", maxLines = 2, overflow = TextOverflow.Ellipsis)
        }
      }
    }
    item {
      SentryTraced("open_nav2_activity") {
        OutlinedButton(
...
