...
      verticalArrangement = Arrangement.Center,
      horizontalAlignment = Alignment.CenterHorizontally,
      modifier = Modifier.fillMaxSize(),
    ) {
      SentryTraced(tag = "button_nav_github") {
        Button(onClick = { navigateGithub() }, modifier = Modifier.padding(top = 32.dp)) {
          Text("Navigate to Github")
        }
      }
      SentryTraced(tag = "button_nav_github_args") {
        Button(onClick = { navigateGithubWithArgs() }, modifier = Modifier.padding(top = 32.dp)) {
          Text("Navigate to Github Page With Args")
        }
...
